# FuckXL

./: code_submission_response.json  courses_data.json  dat.json  lab_data.json  main.py  module_debug.json  pyproject.toml  tests_data.json
test/: courses.py  dashboard.py  login.py  question.py  submission.py
ui/: api_client.py  code_editor_window.py  course_details_window.py  courses_ui.py  courses_window.py  mainwindow.py  practices_window.py
