[project]
name = "fuckxl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.6.2",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "selenium-stealth>=1.0.6",
    "selenium-wire>=5.1.0",
    "setuptools>=80.9.0",
    "webdriver-manager>=4.0.2",
]
